--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,31 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="favicon.ico" type="image/ico">
+    <link rel="icon" href="./favicon.ico" type="image/ico">
     <title>Webpack</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Webpack Course</h1>
+    <div id="app"></div>
+<!--    <div class="container">-->
+<!--        <h1>Webpack Course</h1>-->
 
-        <hr>
+<!--        <hr>-->
 
-        <div class="logo"></div>
+<!--        <div class="logo"></div>-->
 
-        <hr>
+<!--        <hr>-->
 
-        <pre></pre>
-    </div>
+<!--        <pre></pre>-->
+
+<!--        <hr>-->
+
+<!--        <div class="box">-->
+<!--            <h2>Less</h2>-->
+<!--        </div>-->
+
+<!--        <div class="card">-->
+<!--            <h2>SCSS</h2>-->
+<!--        </div>-->
+<!--    </div>-->
 </body>
 </html>
